# youtube-analytics-project

./: pyproject.toml  requiremen.txt
helper/: youtube_api_manual.py
src/: __init__.py  channel.py  playlist.py  video.py
